--- a/index.html
+++ b/index.html
@@ -121,11 +121,10 @@
         // Додавання квітів та серць
         const flowerSection = document.getElementById('flowerSection');
         const flowers = [
-            'https://example.com/flower1.jpg',
-            'https://example.com/flower2.jpg',
-            'https://example.com/flower3.jpg',
-            'https://example.com/flower4.jpg',
-            'https://example.com/flower5.jpg'
+            'flower_1.jpg',
+            'flower_2.jpg',
+            'flower_3.jpg',
+            'flower_4.jpg'
         ];
 
         flowers.forEach(flower => {
