--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             justify-content: space-around;
             margin: 30px 0;
         }
-        .flower-img {
+        .img_fl_1 {
             width: 250px;
             height: 250px;
             object-fit: cover;
