--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             width: 250px;
             height: 250px;
             object-fit: cover;
-            border-radius: 50%;
+            border-radius: 10%;
             margin: 15px;
             transition: transform 0.5s ease;
         }
@@ -104,7 +104,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌸 Рожевий Квітковий Світ 🌺</h1>
+            <h1>🌸 Моїй коханій квіточці 🌺</h1>
         </div>
         
         <div class="flower-section" id="flowerSection">
@@ -116,11 +116,11 @@
                 <img class="img_fl_1" src="./flower_3.jpg" alt="image">
                 <img class="img_fl_1" src="./flower_4.jpg" alt="image">
             </div>
-        </div>
+        </div
 
         <div class="text-section">
-            <h2>Про наш рожевий світ</h2>
-            <p>Ласкаво просимо до чарівного світу квітів та ніжності! Тут кожен може відчути красу природи та тепло весни. Наш сайт - це місце, де поєднуються колір, емоції та натхнення.</p>
+            <h2>Моя Лялечка</h2>
+            <p>Манюнь, дякую що ти в мене є, кицю, мені без тебе так very bed, мені секунди без тебе вистачить щоб скучити неймовірно сильно, моє серденько, ти в мене така найсолодша, так хочу зацьомати тебе, квітунь, ти моє все все, не здавайся, крихітко, я тримаю кулачки, я завжди поруч, заюнь, неймовірно сильно кохаю тебе, буся бубуся мая)❤️</p>
         </div>
     </div>
 
