--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <div class="text-section">
             <h2>Моя Лялечка</h2>
-            <p>Манюнь, дякую що ти в мене є, кицю, мені без тебе так very bed, мені секунди без тебе вистачить щоб скучити неймовірно сильно, моє серденько, ти в мене така найсолодша, так хочу зацьомати тебе, квітунь, ти моє все все, не здавайся, крихітко, я тримаю кулачки, я завжди поруч, заюнь, неймовірно сильно кохаю тебе, буся бубуся мая)❤️</p>
+            <p>Манюнь, дякую, що ти в мене є, кицю, мені без тебе так very bed, мені секунди без тебе вистачить щоб скучити неймовірно сильно, моє серденько, ти в мене така найсолодша, так хочу зацьомати тебе, квітунь, ти моє все все, не здавайся, крихітко, я тримаю кулачки, я завжди поруч, заюнь, неймовірно сильно кохаю тебе, буся бубуся мая)❤️</p>
         </div>
     </div>
 
