--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
     </div>
 
     <script>
+        const flowerSection = document.getElementById('flowerSection');
+        const flowers = [
+            'https://www.pngwing.com/uk/free-png-iwbwp/download'
+            'https://www.pngwing.com/uk/free-png-iwbwp/download'
+        'https://www.pngwing.com/uk/free-png-iwbwp/download'
+        'https://www.pngwing.com/uk/free-png-iwbwp/download'
+        ];
 
         flowers.forEach(flower => {
             const img = document.createElement('img');
